fixed header spacing

--- a/assets/less/app.less
+++ b/assets/less/app.less
@@ -42,8 +42,7 @@ h1, h2, h3, h4, h5{
 
 header.site-header {
    .clearfix();
-   margin: 15px 35px;
-   margin-top: 25px; 
+   margin: 65px 35px;
    .logo{
       float:left;
    }
